--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   </head>
 
   <body>
+    <%= button_to "Sign_out", session_path, method: :delete if authenticated? %>
     <%= yield %>
   </body>
 </html>
